# fastapi-campusx

./: .pre-commit-config.yaml  Makefile  create_database.py  main.py  patient.py  patients.db  pydantic_test.py  pyproject.toml  sqlite_three_test.py  validation_classes.py
api/: __init__.py  address.py  main.py  patient.py
app/: app.py
tests/: test_main.py
