[project]
name = "fastapi-campusx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pre-commit>=4.2.0",
    "pydantic[email]>=2.11.4",
    "ruff>=0.11.10",
    "streamlit>=1.45.1",
    "uvicorn>=0.34.2",
]
